--- a/index.html
+++ b/index.html
@@ -1,8 +1,61 @@
 <html>
-    <head>
-        <title>Calum Johnston| Designer &amp; Developer</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>Calum Johnston | Designer &amp; Developer</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Lato" rel="stylesheet">
+    <link rel='stylesheet' href='style.css'>
+</head>
+
+<body>
+    <div class="container">
+
+        <div class="intro-block">
+            <h1><span style='font-weight:300;'>Hi, I'm</span> Calum.</h1>
+            <p>I <b>design</b> and <b>develop</b> modern, effective user interfaces.</p>
+        </div>
+        <div class="grid-block">
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+        </div>
+        <div class="grid-block">
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+        </div>
+        <div class="grid-block">
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+            <div class="grid-block__item">
+
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
