--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <h3 class="work__block-title">
                             <ion-icon name="desktop" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="https://brisktable.com/menu">Brisk Table</a> <span class="sub-title">2017 - Current @ NCH Software</span></h3>
                         <p class="work__block-subtitle">DESCRIPTION</p>
-                        <p class='work__block-text'>I lead the Front-End Design &amp; Development for <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
-                            a suite of restaurant-themed applications currently in development at NCH Software.</p>
+                        <p class='work__block-text'>I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
+                            a suite of b2b cloud-based applications currently in development at NCH Software.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Built from the ground up using vanilla JavaScript, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a>                            allows users to create restaurant menus from scratch.
                             <ul class="work__block-list">
