--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Lato" rel="stylesheet">
     <link rel='stylesheet' href='css/style.css'>
     <link href="css/lightbox.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
 </head>
