--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <div class="hero-content">
                 <h1>Hi, I'm <b>Calum</b>.</h1>
                 <h2>Front-End Web Developer - Designer - UI/UX</h2>
+                <div class="hero-content__highlights-container">
+                    <div class="hero-content__highlight">
+
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -35,7 +40,7 @@
                         <p class='work__block-text'>I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
-                        <p class='work__block-text'>Built from the ground up using vanilla JavaScript, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a>                            allows users to create restaurant menus from scratch.
+                        <p class='work__block-text'>Built from the ground up using vanilla JavaScript, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant menus from scratch.
                             <ul class="work__block-list">
                                 <li>Designed to display consistently across all devices.</li>
                                 <li>Image Uploading, utilising LocalStorage API's to allow for instant client-side redering of
@@ -46,7 +51,7 @@
                                 <li>Menu Generator is able to function without an internet connection after the initial page
                                     load (See <a class='text-link' href="https://developers.google.com/web/progressive-web-apps/">Progressive Web Application</a>),
                                     due to a
-                                    <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single Page Application (SPA)</a>                                    architecture that is designed to simulate the reactivity of native mobile and desktop
+                                    <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single-Page Application</a> architecture that is designed to simulate the reactivity of native mobile and desktop
                                     applications. The only 'internet connectivity required' portion of the page is the "Download
                                     PDF" generation, which may also be pushed into the client-side in future.
                             </ul>
