--- a/index.html
+++ b/index.html
@@ -21,9 +21,22 @@
             <div class="hero-content">
                 <h1>Hi, I'm <b>Calum</b>.</h1>
                 <h2>Front-End Web Developer - Designer - UI/UX</h2>
-                <div class="hero-content__highlights-container">
+                <h3>I create web experiences that are:</h3>
+                <div class="hero-content__highlights-container container">
                     <div class="hero-content__highlight">
-
+                        <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
+                        <h4 class="hero-content__highlight-title">Intuitive</h4>
+                        <p class="hero-content__highlight-subtext">The user experience should feel natural, and any information should be presented clearly and in a well defined hierarchy.</p>
+                    </div>
+                    <div class="hero-content__highlight hero-content__highlight--pop">
+                        <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
+                        <h4 class="hero-content__highlight-title">Accessible</h4>
+                        <p class="hero-content__highlight-subtext">Consistent across all common browsers and devices, and meeting WCAG 2.0 AA guidelines to ensure inclusivity.</p>
+                    </div>
+                    <div class="hero-content__highlight">
+                        <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
+                        <h4 class="hero-content__highlight-title">Effective</h4>
+                        <p class="hero-content__highlight-subtext">Any assumptions should be tested and verified. The interface should be continually improving in order to meet business objectives.</p>
                     </div>
                 </div>
             </div>
@@ -36,22 +49,22 @@
                     <div class="work__block work__block--linksplit">
                         <h3 class="work__block-title">
                             <ion-icon name="desktop" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="https://brisktable.com/menu">Brisk Table</a> <span class="sub-title">2017 - Current @ NCH Software</span></h3>
-                        <p class="work__block-subtitle">DESCRIPTION</p>
-                        <p class='work__block-text'>I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
+                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
+                        <p class='work__block-text'>In my current role, I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
-                        <p class='work__block-text'>Built from the ground up using vanilla JavaScript, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant menus from scratch.
+                        <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a>                            allows users to create restaurant menus from scratch.
                             <ul class="work__block-list">
                                 <li>Designed to display consistently across all devices.</li>
-                                <li>Image Uploading, utilising LocalStorage API's to allow for instant client-side redering of
-                                    the image, while it is simultaneously uploaded to the server in the background.</li>
+                                <li>The image uploading process utilises LocalStorage to allow for instant client-side redering of
+                                    the thumbnail preview, while it is simultaneously uploaded to the server in the background.</li>
                                 <li>The live menu preview is generated client-side using SVG elements. The SVG is regenerated
                                     on keyboard input via an array of JavScript SVG Layout functions. text-wrapping, page
                                     overs flowing</li>
                                 <li>Menu Generator is able to function without an internet connection after the initial page
                                     load (See <a class='text-link' href="https://developers.google.com/web/progressive-web-apps/">Progressive Web Application</a>),
                                     due to a
-                                    <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single-Page Application</a> architecture that is designed to simulate the reactivity of native mobile and desktop
+                                    <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single-Page Application</a>                                    architecture that is designed to simulate the reactivity of native mobile and desktop
                                     applications. The only 'internet connectivity required' portion of the page is the "Download
                                     PDF" generation, which may also be pushed into the client-side in future.
                             </ul>
@@ -66,6 +79,14 @@
                             <p class="work__block-subtitle">SCREENSHOTS</p>
                             <div class="work__block-screenshots__container">
                                 <div class="work__block-screenshot-container">
+                                    <div class="work__block-screenshot">
+                                        <a data-lightbox="brisk_screen_4" href="images/brisk_screen_4.png">
+                                                    <img src="images/brisk_screen_4.png">
+                                                </a>
+                                    </div>
+                                </div>
+                                <div class="work__block-screenshot-container">
+
                                     <div class="work__block-screenshot">
                                         <a data-lightbox="brisk_screen_3" href="images/brisk_screen_1.png">
                                             <img src="images/brisk_screen_1.png">
@@ -86,6 +107,7 @@
                                         </a>
                                     </div>
                                 </div>
+
                             </div>
                     </div>
                 </div>
@@ -93,29 +115,27 @@
                     <div class="work__block work__block--linksplit">
                         <h3 class="work__block-title">
                             <ion-icon name="desktop" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="http://linksplit.io?ref=portfolio">LinkSplit.io</a> <span class="sub-title">Personal Project 2018 - Current</span></h3>
-                        <p class="work__block-subtitle">DESCRIPTION</p>
+                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
                         <p class='work__block-text'><a class='text-link' href="http://linksplit.io?ref=portfolio">LinkSplit.io</a>, my current personal
                             project, is an analytics web application designed to simplify the process of A/B testing landing
                             page variations. <br>Users are able to paste in two URLs, and LinkSplit will create a shortened
-                            URL. This shortened URL will split any traffic that visits it between one of the two variations,
-                            with a perfect 50/50 split.</p>
+                            URL. This shortened URL will split any traffic 50/50 between the two variations. This allows the user to evaluate which of the two variations was more effective - Without the need to integrate an A/B Testing Framework.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <ul class="work__block-list">
-                            <li>3000+ Unique visitors in the first 24hrs from launch, with positive user feedback.</li>
-                            <li>Written in JavaScript, using Node JS + Express.</li>
-                            <li>If a duplicate URL is detected, the original will be served - No duplicate data.</li>
-                            <li>URLs are stored in an <a class='text-link' href="http://mlab.com">mlab.com</a> cloud-hosted MongoDB
+                            <li>3000+ Unique visitors in the first 24 hours from launch, with very positive user feedback.</li>
+                            <li>Written purely in JavaScript, using Node JS + Express Framework.</li>
+                            <li>If a duplicate URL is detected, the original will be served resulting in no duplicate data.</li>
+                            <li>URLs are stored in an <a class='text-link' href="http://mlab.com">mlab.com</a> Cloud-Hosted MongoDB
                                 configuration.
                             </li>
                             <li>Responsive Design using CSS3 Media Queries. Over 50% of the site traffic is from mobile devices.</li>
                         </ul>
                         <p class="work__block-subtitle">TECHNOLOGIES</p>
                         <ul class='work__block-list'>
-                            <li>HTMl5</li>
-                            <li>CSS3</li>
-                            <li>Vanilla JavaScript + AJAX</li>
-                            <li>Proprietary C++ Server</li>
-                            <li>MySQL</li>
+                            <li>NodeJS + Express</li>
+                            <li>Pug Node Templating Engine</li>
+                            <li>CSS3 + SASS</li>
+                            <li>MongoDB Cloud-Hosted Database</li>
                         </ul>
                         <p class="work__block-subtitle">SCREENSHOTS</p>
                         <div class="work__block-screenshots__container">
@@ -141,8 +161,8 @@
                     <div class="work__block work__block--hga">
                         <h3 class="work__block-title">
                             <ion-icon name="brush" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="http://hughgordon.com.au">Hugh Gordon Architect</a> <span class="sub-title">2015 - 2017</span></h3>
-                        <p class="work__block-subtitle">DESCRIPTION</p>
-                        <p class='work__block-text'>Design and development of a business website and client-management system integration.</p>
+                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
+                        <p class='work__block-text'>Redesign and development of a full business website, including Client-Management System integration.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Hugh Gordon Architect required a robust and flexible solution to handle their growing client base.
                             The ability to edit and add their own web content was a requirement.</p>
@@ -155,11 +175,10 @@
                         </ul>
                         <p class="work__block-subtitle">TECHNOLOGIES</p>
                         <ul class='work__block-list'>
-                            <li>HTMl5</li>
-                            <li>CSS3</li>
-                            <li>Vanilla JavaScript + AJAX</li>
-                            <li>Proprietary C++ Server</li>
-                            <li>MySQL</li>
+                            <li>WordPress CMS</li>
+                            <li>HTML5 + CSS3</li>
+                            <li>JavaScript + jQuery</li>
+                            <li>PHP</li>
                         </ul>
                         <p class="work__block-subtitle">SCREENSHOTS</p>
                         <div class="work__block-screenshots__container">
