--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
                     <div class="hero-content__highlight">
                         <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
                         <h4 class="hero-content__highlight-title">Intuitive</h4>
-                        <p class="hero-content__highlight-subtext">The user experience should feel natural, and any information should be presented clearly and in a well defined hierarchy.</p>
+                        <p class="hero-content__highlight-subtext">The user experience should feel natural, and any information should be presented clearly and in a
+                            well defined hierarchy.</p>
                     </div>
                     <div class="hero-content__highlight hero-content__highlight--pop">
                         <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
                         <h4 class="hero-content__highlight-title">Accessible</h4>
-                        <p class="hero-content__highlight-subtext">Consistent across all common browsers and devices, and meeting WCAG 2.0 AA guidelines to ensure inclusivity.</p>
+                        <p class="hero-content__highlight-subtext">Web interfaces should display consistently across all common browsers and devices, and should meet
+                            WCAG 2.0 AA guidelines to ensure inclusivity.</p>
                     </div>
                     <div class="hero-content__highlight">
                         <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
                         <h4 class="hero-content__highlight-title">Effective</h4>
-                        <p class="hero-content__highlight-subtext">Any assumptions should be tested and verified. The interface should be continually improving in order to meet business objectives.</p>
+                        <p class="hero-content__highlight-subtext">Any assumptions should be tested and verified. The interface should be continually improving in order
+                            to meet business objectives.</p>
                     </div>
                 </div>
             </div>
@@ -49,15 +52,50 @@
                     <div class="work__block work__block--linksplit">
                         <h3 class="work__block-title">
                             <ion-icon name="desktop" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="https://brisktable.com/menu">Brisk Table</a> <span class="sub-title">2017 - Current @ NCH Software</span></h3>
-                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
+                        <p class="work__block-subtitle" style='margin:0'>SCREENSHOTS</p>
+                        <div class="work__block-screenshots__container">
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="brisk_screen_4" href="images/brisk_screen_4.png">
+                                                    <img src="images/brisk_screen_4.png">
+                                                </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="brisk_screen_3" href="images/brisk_screen_1.png">
+                                            <img src="images/brisk_screen_1.png">
+                                        </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="brisk_screen_3" href="images/brisk_screen_2.png">
+                                                <img src="images/brisk_screen_2.png">
+                                            </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="brisk_screen_3" href="images/brisk_screen_3.png">
+                                            <img src="images/brisk_screen_3.png">
+                                        </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <p class="work__block-subtitle">DESCRIPTION</p>
                         <p class='work__block-text'>In my current role, I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
-                        <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6, BriskTable's <a class='text-link' href="https://brisktable.com/menu">Menu Generator (Alpha)</a>                            allows users to create restaurant menus from scratch.
+                        <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6 (requirement), BriskTable's <a class='text-link'
+                                href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant
+                            menus from scratch.
                             <ul class="work__block-list">
                                 <li>Designed to display consistently across all devices.</li>
-                                <li>The image uploading process utilises LocalStorage to allow for instant client-side redering of
-                                    the thumbnail preview, while it is simultaneously uploaded to the server in the background.</li>
+                                <li>The image uploading process utilises LocalStorage to allow for instant client-side redering
+                                    of the thumbnail preview, while it is simultaneously uploaded to the server in the background.</li>
                                 <li>The live menu preview is generated client-side using SVG elements. The SVG is regenerated
                                     on keyboard input via an array of JavScript SVG Layout functions. text-wrapping, page
                                     overs flowing</li>
@@ -72,54 +110,42 @@
                             <ul class='work__block-list'>
                                 <li>HTML5</li>
                                 <li>CSS3</li>
-                                <li>Vanilla JavaScript (Requirement) + AJAX</li>
+                                <li>Vanilla JavaScript + AJAX</li>
                                 <li>Proprietary C++ Server</li>
                                 <li>MySQL</li>
                             </ul>
-                            <p class="work__block-subtitle">SCREENSHOTS</p>
-                            <div class="work__block-screenshots__container">
-                                <div class="work__block-screenshot-container">
-                                    <div class="work__block-screenshot">
-                                        <a data-lightbox="brisk_screen_4" href="images/brisk_screen_4.png">
-                                                    <img src="images/brisk_screen_4.png">
-                                                </a>
-                                    </div>
-                                </div>
-                                <div class="work__block-screenshot-container">
 
-                                    <div class="work__block-screenshot">
-                                        <a data-lightbox="brisk_screen_3" href="images/brisk_screen_1.png">
-                                            <img src="images/brisk_screen_1.png">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="work__block-screenshot-container">
-                                    <div class="work__block-screenshot">
-                                        <a data-lightbox="brisk_screen_3" href="images/brisk_screen_2.png">
-                                                <img src="images/brisk_screen_2.png">
-                                            </a>
-                                    </div>
-                                </div>
-                                <div class="work__block-screenshot-container">
-                                    <div class="work__block-screenshot">
-                                        <a data-lightbox="brisk_screen_3" href="images/brisk_screen_3.png">
-                                            <img src="images/brisk_screen_3.png">
-                                        </a>
-                                    </div>
-                                </div>
-
-                            </div>
                     </div>
                 </div>
                 <div class="work__block-wrapper">
                     <div class="work__block work__block--linksplit">
                         <h3 class="work__block-title">
                             <ion-icon name="desktop" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="http://linksplit.io?ref=portfolio">LinkSplit.io</a> <span class="sub-title">Personal Project 2018 - Current</span></h3>
-                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
+                        <p class="work__block-subtitle" style='margin:0'>SCREENSHOTS</p>
+                        <div class="work__block-screenshots__container">
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="linksplit_screen_1" href="images/linksplit_screen_1.png">
+                                            <img src="images/linksplit_screen_1.png">
+                                        </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="linksplit_screen_2" href="images/linksplit_screen_2.JPG">
+                                            <img src="images/linksplit_screen_2.JPG">
+                                        </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <p class="work__block-subtitle">DESCRIPTION</p>
                         <p class='work__block-text'><a class='text-link' href="http://linksplit.io?ref=portfolio">LinkSplit.io</a>, my current personal
                             project, is an analytics web application designed to simplify the process of A/B testing landing
                             page variations. <br>Users are able to paste in two URLs, and LinkSplit will create a shortened
-                            URL. This shortened URL will split any traffic 50/50 between the two variations. This allows the user to evaluate which of the two variations was more effective - Without the need to integrate an A/B Testing Framework.</p>
+                            URL. This shortened URL will split any traffic 50/50 between the two variations. This allows
+                            the user to evaluate which of the two variations was more effective - Without the need to integrate
+                            an A/B Testing Framework.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <ul class="work__block-list">
                             <li>3000+ Unique visitors in the first 24 hours from launch, with very positive user feedback.</li>
@@ -137,32 +163,40 @@
                             <li>CSS3 + SASS</li>
                             <li>MongoDB Cloud-Hosted Database</li>
                         </ul>
-                        <p class="work__block-subtitle">SCREENSHOTS</p>
-                        <div class="work__block-screenshots__container">
-                            <div class="work__block-screenshot-container">
-                                <div class="work__block-screenshot">
-                                    <a data-lightbox="linksplit_screen_1" href="images/linksplit_screen_1.png">
-                                        <img src="images/linksplit_screen_1.png">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="work__block-screenshot-container">
-                                <div class="work__block-screenshot">
-                                    <a data-lightbox="linksplit_screen_2" href="images/linksplit_screen_2.JPG">
-                                        <img src="images/linksplit_screen_2.JPG">
-                                    </a>
-                                </div>
-                            </div>
 
-                        </div>
                     </div>
                 </div>
                 <div class="work__block-wrapper">
                     <div class="work__block work__block--hga">
                         <h3 class="work__block-title">
                             <ion-icon name="brush" style='position:relative;top:0.2em;margin-right:0.8em'></ion-icon><a href="http://hughgordon.com.au">Hugh Gordon Architect</a> <span class="sub-title">2015 - 2017</span></h3>
-                        <p class="work__block-subtitle" style='margin:0'>DESCRIPTION</p>
-                        <p class='work__block-text'>Redesign and development of a full business website, including Client-Management System integration.</p>
+                        <p class="work__block-subtitle" style='margin:0'>SCREENSHOTS</p>
+                        <div class="work__block-screenshots__container">
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="hga_screen_1" href="images/hga_screen_1.png">
+                                            <img src="images/hga_screen_1.png">
+                                        </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="hga_screen_2" href="images/hga_screen_2.png">
+                                            <img src="images/hga_screen_2.png">
+                                        </a>
+                                </div>
+                            </div>
+                            <div class="work__block-screenshot-container">
+                                <div class="work__block-screenshot">
+                                    <a data-lightbox="hga_screen_3" href="images/hga_screen_3.png">
+                                            <img src="images/hga_screen_3.png">
+                                        </a>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="work__block-subtitle">DESCRIPTION</p>
+                        <p class='work__block-text'>Undertook the redesign and development of Hugh Gordon Architect's business website, including a Client-Management
+                            System integration.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Hugh Gordon Architect required a robust and flexible solution to handle their growing client base.
                             The ability to edit and add their own web content was a requirement.</p>
@@ -180,30 +214,7 @@
                             <li>JavaScript + jQuery</li>
                             <li>PHP</li>
                         </ul>
-                        <p class="work__block-subtitle">SCREENSHOTS</p>
-                        <div class="work__block-screenshots__container">
-                            <div class="work__block-screenshot-container">
-                                <div class="work__block-screenshot">
-                                    <a data-lightbox="hga_screen_1" href="images/hga_screen_1.png">
-                                        <img src="images/hga_screen_1.png">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="work__block-screenshot-container">
-                                <div class="work__block-screenshot">
-                                    <a data-lightbox="hga_screen_2" href="images/hga_screen_2.png">
-                                        <img src="images/hga_screen_2.png">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="work__block-screenshot-container">
-                                <div class="work__block-screenshot">
-                                    <a data-lightbox="hga_screen_3" href="images/hga_screen_3.png">
-                                        <img src="images/hga_screen_3.png">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
