--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h3>I create web experiences that are:</h3>
                 <div class="hero-content__highlights-container container">
                     <div class="hero-content__highlight">
-                        <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
+                        <ion-icon name="people" style='position:relative;top:0.2em'></ion-icon>
                         <h4 class="hero-content__highlight-title">Intuitive</h4>
                         <p class="hero-content__highlight-subtext">The user experience should feel natural, and any information should be presented clearly and in a
                             well defined hierarchy.</p>
@@ -36,7 +36,7 @@
                             WCAG 2.0 AA guidelines to ensure inclusivity.</p>
                     </div>
                     <div class="hero-content__highlight">
-                        <ion-icon name="globe" style='position:relative;top:0.2em'></ion-icon>
+                        <ion-icon name="trending-up" style='position:relative;top:0.2em'></ion-icon>
                         <h4 class="hero-content__highlight-title">Effective</h4>
                         <p class="hero-content__highlight-subtext">Any assumptions should be tested and verified. The interface should be continually improving in order
                             to meet business objectives.</p>
@@ -88,6 +88,7 @@
                         <p class="work__block-subtitle">DESCRIPTION</p>
                         <p class='work__block-text'>In my current role, I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
+                            <p class='work__block-text'>My typical workflow for a BriskTable component starts with brain-storming and rough sketches, followed by wireframes and prototypes in Adobe XD. Assets, colours and branding are then imported from our design system before being ported to HTML5 and CSS3 via a mobile-first approach.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6 (requirement), BriskTable's <a class='text-link'
                                 href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant
@@ -143,13 +144,13 @@
                         <p class='work__block-text'><a class='text-link' href="http://linksplit.io?ref=portfolio">LinkSplit.io</a>, my current personal
                             project, is an analytics web application designed to simplify the process of A/B testing landing
                             page variations. <br>Users are able to paste in two URLs, and LinkSplit will create a shortened
-                            URL. This shortened URL will split any traffic 50/50 between the two variations. This allows
-                            the user to evaluate which of the two variations was more effective - Without the need to integrate
+                            URL. This shortened URL will split any traffic 50/50 between the two variations, allowing
+                            the user to evaluate which of the two variations was more effective without the need to integrate
                             an A/B Testing Framework.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <ul class="work__block-list">
                             <li>3000+ Unique visitors in the first 24 hours from launch, with very positive user feedback.</li>
-                            <li>Written purely in JavaScript, using Node JS + Express Framework.</li>
+                            <li>Written in JavaScript, using Node JS + Express.</li>
                             <li>If a duplicate URL is detected, the original will be served resulting in no duplicate data.</li>
                             <li>URLs are stored in an <a class='text-link' href="http://mlab.com">mlab.com</a> Cloud-Hosted MongoDB
                                 configuration.
