--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                         <p class="work__block-subtitle">DESCRIPTION</p>
                         <p class='work__block-text'>In my current role, I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
-                            <p class='work__block-text'>My typical workflow for a BriskTable component starts with brain-storming and rough sketches, followed by wireframes and prototypes in Adobe XD. Assets, colours and branding are then imported from our design system before being ported to HTML5 and CSS3 via a mobile-first approach.</p>
+                            <p class='work__block-text'>My typical workflow for a BriskTable component starts with brain-storming and rough sketches, followed by wireframes and prototypes in Adobe XD. Assets, colours and branding are then imported from our design system before being translated to HTML5 and CSS3.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6 (requirement), BriskTable's <a class='text-link'
                                 href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant
                             menus from scratch.
                             <ul class="work__block-list">
-                                <li>Designed to display consistently across all devices.</li>
+                                <li>Designed to display consistently across all browsers and devices.</li>
                                 <li>The image uploading process utilises LocalStorage to allow for instant client-side redering
                                     of the thumbnail preview, while it is simultaneously uploaded to the server in the background.</li>
                                 <li>The live menu preview is generated client-side using SVG elements. The SVG is regenerated
@@ -110,8 +110,8 @@
                             <p class="work__block-subtitle">TECHNOLOGIES</p>
                             <ul class='work__block-list'>
                                 <li>HTML5</li>
-                                <li>CSS3</li>
-                                <li>Vanilla JavaScript + AJAX</li>
+                                <li>CSS3 + Pre-processors</li>
+                                <li>JavaScript + AJAX</li>
                                 <li>Proprietary C++ Server</li>
                                 <li>MySQL</li>
                             </ul>
@@ -162,6 +162,7 @@
                             <li>NodeJS + Express</li>
                             <li>Pug Node Templating Engine</li>
                             <li>CSS3 + SASS</li>
+                            <li>jQuery</li>
                             <li>MongoDB Cloud-Hosted Database</li>
                         </ul>
 
