--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     load (See <a class='text-link' href="https://developers.google.com/web/progressive-web-apps/">Progressive Web Application</a>),
                                     due to a
                                     <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single-Page Application</a>                                    architecture that is designed to simulate the reactivity of native mobile and desktop
-                                    applications. The only 'internet connectivity required' portion of the page is the "Download
+                                    applications. The only "internet connectivity required" portion of the page is the "Download
                                     PDF" generation, which may also be pushed into the client-side in future.
                             </ul>
                             <p class="work__block-subtitle">TECHNOLOGIES</p>
@@ -205,7 +205,7 @@
                         <ul class="work__block-list">
                             <li>Custom WordPress installation</li>
                             <li>Full Search Engine Optimisation Service <br><span style='font-size:0.8em'>UPDATE: Hugh has since informed me that HGA are now ranking #1 for 'Canberra Architect'. Great result.</span></li>
-                            <li>Client-Management System integration with customer roles and permissions</a>
+                            <li>Client-Management System integration with custom roles and permissions to suit the businesses requirements.</a>
                             </li>
                             <li>Designed with a particular focus on brand-recognition</li>
                         </ul>
