--- a/index.html
+++ b/index.html
@@ -86,26 +86,23 @@
 
                         </div>
                         <p class="work__block-subtitle">DESCRIPTION</p>
-                        <p class='work__block-text'>In my current role, I lead the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
+                        <p class='work__block-text'>Part of my current role involves leading the Front-End Design &amp; Development of <a class='text-link' href="https://brisktable.com/menu">Brisk Table</a>,
                             a suite of b2b cloud-based applications currently in development at NCH Software.</p>
-                            <p class='work__block-text'>My typical workflow for a BriskTable component starts with brain-storming and rough sketches, followed by wireframes and prototypes in Adobe XD. Assets, colours and branding are then imported from our design system before being translated to HTML5 and CSS3.</p>
+                            <p class='work__block-text'>A typical workflow for a BriskTable component starts with brain-storming and rough sketches, followed by wireframes and prototypes in Adobe XD. Assets, colours and branding are then imported from our design system before being translated to HTML5, CSS3 and JS.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <p class='work__block-text'>Built from the ground-up using vanilla JavaScript ES6 (requirement), BriskTable's <a class='text-link'
                                 href="https://brisktable.com/menu">Menu Generator (Alpha)</a> allows users to create restaurant
                             menus from scratch.
                             <ul class="work__block-list">
-                                <li>Designed to display consistently across all browsers and devices.</li>
+                                <li>Designed to display consistently across all browsers and devices, with an emphasis on accessibility.</li>
                                 <li>The image uploading process utilises LocalStorage to allow for instant client-side redering
-                                    of the thumbnail preview, while it is simultaneously uploaded to the server in the background.</li>
-                                <li>The live menu preview is generated client-side using SVG elements. The SVG is regenerated
-                                    on keyboard input via an array of JavScript SVG Layout functions. text-wrapping, page
-                                    overs flowing</li>
+                                    of the thumbnail preview, while it is simultaneously uploaded to the server in the background. This allows for a seamless user-experience.</li>
+                                <li>The live menu preview is generated client-side using SVG elements. The SVG is created via an array of JavaScript SVG Text-to-SVG functions, including text-wrapping, page-overflow detection, and margining.</li>
                                 <li>Menu Generator is able to function without an internet connection after the initial page
                                     load (See <a class='text-link' href="https://developers.google.com/web/progressive-web-apps/">Progressive Web Application</a>),
                                     due to a
                                     <a class='text-link' href="https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46">Single-Page Application</a>                                    architecture that is designed to simulate the reactivity of native mobile and desktop
-                                    applications. The only "internet connectivity required" portion of the page is the "Download
-                                    PDF" generation, which may also be pushed into the client-side in future.
+                                    applications. The only "internet connectivity required" portion of the page is the PDF download, which may also be pushed into the client-side in future.
                             </ul>
                             <p class="work__block-subtitle">TECHNOLOGIES</p>
                             <ul class='work__block-list'>
@@ -144,18 +141,19 @@
                         <p class='work__block-text'><a class='text-link' href="http://linksplit.io?ref=portfolio">LinkSplit.io</a>, my current personal
                             project, is an analytics web application designed to simplify the process of A/B testing landing
                             page variations. <br>Users are able to paste in two URLs, and LinkSplit will create a shortened
-                            URL. This shortened URL will split any traffic 50/50 between the two variations, allowing
+                            URL. This shortened URL will split any traffic evenly between the two variations, allowing
                             the user to evaluate which of the two variations was more effective without the need to integrate
                             an A/B Testing Framework.</p>
                         <p class="work__block-subtitle">NOTABLE FEATURES</p>
                         <ul class="work__block-list">
+                            <li>Fully responsive Design using CSS3 Media Queries. Over 50% of the site traffic is from mobile devices.</li>
                             <li>3000+ Unique visitors in the first 24 hours from launch, with very positive user feedback.</li>
                             <li>Written in JavaScript, using Node JS + Express.</li>
                             <li>If a duplicate URL is detected, the original will be served resulting in no duplicate data.</li>
                             <li>URLs are stored in an <a class='text-link' href="http://mlab.com">mlab.com</a> Cloud-Hosted MongoDB
                                 configuration.
                             </li>
-                            <li>Responsive Design using CSS3 Media Queries. Over 50% of the site traffic is from mobile devices.</li>
+                            
                         </ul>
                         <p class="work__block-subtitle">TECHNOLOGIES</p>
                         <ul class='work__block-list'>
