--- a/index.html
+++ b/index.html
@@ -228,9 +228,10 @@
             <ion-icon name="heart"></ion-icon> by Calum </section>
     </div>
     </div>
+
     <script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/tilt.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/lightbox.js"></script>
 </body>
 
